# strata

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
benches/: chunk_storage.rs  erasure_coding.rs
benchmarks/: fio_benchmark.sh  run_benchmarks.sh
cli/: Cargo.toml
cli/src/: client.rs  config.rs  main.rs  output.rs
cli/src/commands/: admin.rs  bucket.rs  cluster.rs  config.rs  mod.rs  object.rs
dashboard/: index.html  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: Layout.tsx
dashboard/src/pages/: Alerts.tsx  BucketDetail.tsx  Buckets.tsx  Dashboard.tsx  Login.tsx  Nodes.tsx  Settings.tsx
dashboard/src/store/: index.ts
dashboard/src/types/: index.ts
docker/: config.toml  prometheus.yml
docs/: FEATURES.md  README.md
docs/adr/: 0001-raft-consensus-for-metadata.md  0002-erasure-coding-over-replication.md  0003-dual-access-interface.md  0004-tokio-async-runtime.md  0005-unified-error-type.md  0006-http-rest-over-grpc.md  0007-deny-panics-in-critical-modules.md  0008-configuration-presets.md  0009-circuit-breaker-pattern.md  0010-lease-based-distributed-locking.md  0011-pluggable-placement-strategies.md  0012-multi-algorithm-compression-encryption.md  ADR-0001-raft-consensus-for-metadata.md  ADR-0002-reed-solomon-erasure-coding.md  ADR-0003-layered-access-patterns.md  ADR-0004-async-rust-with-tokio.md  ADR-0005-hybrid-rpc-strategy.md  ADR-0006-centralized-error-type.md  ADR-0007-configuration-presets-pattern.md  ADR-0008-circuit-breaker-pattern.md  ADR-0009-strict-lint-enforcement.md  ADR-0010-graceful-shutdown.md  ADR-0011-feature-flags.md  ADR-0012-audit-logging.md  README.md
docs/api/: client.md  data.md  errors.md  metadata.md  s3.md  types.md
docs/architecture/: diagrams.md  overview.md
docs/guides/: configuration.md  deployment.md  operations.md  quickstart.md
examples/: basic_client.rs  cluster_setup.rs  erasure_coding.rs  s3_gateway.rs
helm/strata/: Chart.yaml  values.yaml
helm/strata/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  ingress.yaml  pdb.yaml  (+4 more)
operator/: Cargo.toml
operator/src/: backup_controller.rs  controller.rs  crd.rs  error.rs  main.rs  metrics.rs  reconciler.rs
sdks/go/: go.mod
sdks/javascript/: package.json  tsconfig.json
sdks/python/: pyproject.toml
sdks/python/strata/: __init__.py  bucket.py  client.py  config.py  exceptions.py  object.py
src/: audit.rs  backup.rs  benchmarks.rs  cache.rs  carbon.rs  classify.rs  compression.rs  confidential.rs  crdt.rs  daemon.rs  dedup.rs  ebpf.rs  encryption.rs  error.rs  events.rs  federation.rs  gc.rs  global.rs  graphql.rs  health.rs  homomorphic.rs  intent.rs  iouring.rs  lib.rs  lock.rs  main.rs  pool.rs  prefetch.rs  quota.rs  ratelimit.rs  resilience.rs  scrub.rs  selfheal.rs  shutdown.rs  snapshot.rs  timetravel.rs  tls.rs  triggers.rs  types.rs  vector.rs  (+1 more)
src/aiops/: anomaly.rs  capacity.rs  config.rs  engine.rs  failure_predictor.rs  metrics.rs  mod.rs  prediction.rs  tuner.rs  workload.rs
src/auth/: acl.rs  kms.rs  middleware.rs  mod.rs  token.rs  validation.rs
src/cdc/: capture.rs  connector.rs  event.rs  mod.rs  stream.rs  subscription.rs
src/cdp/: checkpoint.rs  journal.rs  mod.rs  policy.rs  recovery.rs
src/chaos/: config.rs  controller.rs  experiment.rs  mod.rs  types.rs
src/cli/: mod.rs
src/client/: mod.rs
src/cluster/: balancer.rs  coordinator.rs  executor.rs  failure_detector.rs  mod.rs  placement.rs  recovery.rs
src/compute/: inference.rs  mod.rs  model.rs  registry.rs  serving.rs
src/config/: mod.rs
src/csi/: controller.rs  identity.rs  mod.rs  node.rs
src/data/: chunk_storage.rs  mod.rs  prefetch_integration.rs  read_repair.rs  server.rs
src/edge/: invalidation.rs  mod.rs  node.rs  replication.rs
src/erasure/: mod.rs
src/federation/: cluster_registry.rs  mod.rs  namespace_router.rs
src/fuse/: client.rs  filesystem.rs  mod.rs
src/gpu/: device.rs  kernel.rs  memory.rs  mod.rs  operations.rs
src/lineage/: catalog.rs  discovery.rs  graph.rs  mod.rs  schema.rs
src/metadata/: batching.rs  mod.rs  operations.rs  server.rs  state_machine.rs
src/multitenancy/: billing.rs  context.rs  isolation.rs  mod.rs  quota.rs  tenant.rs
src/nfs/: compound.rs  error.rs  filehandle.rs  mod.rs  operations.rs  protocol.rs  server.rs  session.rs  state.rs  types.rs
src/observability/: alerting.rs  distributed_tracing.rs  histograms.rs  mod.rs
src/otel/: context.rs  exporter.rs  middleware.rs  mod.rs  sampler.rs  spans.rs
src/pmem/: allocator.rs  buffer.rs  cxl.rs  device.rs  mod.rs
src/raft/: log.rs  mod.rs  node.rs  rpc.rs  state.rs  storage.rs
src/rdma/: connection.rs  dpdk.rs  memory.rs  mod.rs  transport.rs
src/s3/: cors.rs  credentials.rs  encryption.rs  gateway.rs  handlers.rs  lifecycle.rs  middleware.rs  mod.rs  object_lock.rs  presigned.rs  replication.rs  select.rs  signature.rs  storage_class.rs  versioning.rs  xml.rs
src/scheduling/: cron.rs  engine.rs  mod.rs
src/search/: analyzer.rs  document.rs  index.rs  mod.rs  query.rs  ranking.rs
src/snapshot/: lifecycle.rs  mod.rs
src/tiering/: engine.rs  migration.rs  ml_telemetry.rs  mod.rs  policy.rs  tracker.rs
src/worm/: audit.rs  compliance.rs  legal_hold.rs  mod.rs  retention.rs
terraform/: go.mod  main.go
terraform/strata/: client.go  data_sources.go  provider.go  resource_bucket.go  resource_object.go
tests/: chaos_integration.rs  client_integration.rs  cluster_integration.rs  data_integration.rs  erasure_integration.rs  jepsen_tests.rs  linearizability_tests.rs  metadata_integration.rs  performance_integration.rs  raft_integration.rs  recovery_tests.rs  s3_integration.rs  workflow_integration.rs
tests/common/: assertions.rs  cluster_sim.rs  fixtures.rs  mod.rs
(+12 files in other folders)
