[package]
name = "strata"
version = "0.1.0"
edition = "2021"
description = "A distributed file system combining POSIX compatibility with S3 access"
license = "MIT"
authors = ["Strata Contributors"]
repository = "https://github.com/strata-storage/strata"
keywords = ["distributed", "filesystem", "storage", "raft", "s3"]
categories = ["filesystem", "network-programming"]

[features]
default = ["fuse", "s3"]
fuse = ["dep:fuser"]
s3 = []

[[bin]]
name = "strata"
path = "src/main.rs"

[[bin]]
name = "strata-server"
path = "src/bin/server.rs"

[[bin]]
name = "strata-fuse"
path = "src/bin/fuse_mount.rs"

[dependencies]
# Async runtime - specifying exact features needed instead of "full"
tokio = { version = "1", features = [
    "rt-multi-thread",  # Multi-threaded runtime
    "macros",           # #[tokio::main] and #[tokio::test]
    "net",              # TcpListener, TcpStream
    "sync",             # mpsc, oneshot, RwLock, broadcast, watch
    "time",             # interval, sleep, timeout
    "fs",               # File system operations
    "io-util",          # IO utilities (AsyncReadExt, AsyncWriteExt)
    "signal",           # Signal handling for graceful shutdown
    "tracing",          # Tracing integration
] }
tokio-stream = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
tonic = "0.12"
prost = "0.13"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.5"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }

# Storage
rocksdb = "0.22"

# Erasure coding
reed-solomon-erasure = "6.0"

# FUSE filesystem
fuser = { version = "0.14", optional = true }
libc = "0.2"

# Hashing and crypto
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
md5 = "0.7"
crc32fast = "1.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
ring = "0.17"
serde_bytes = "0.11"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
bytes = "1.0"
parking_lot = "0.12"
dashmap = "6.0"
lru = "0.12"
crossbeam-channel = "0.5"
async-trait = "0.1"
futures = "0.3"
pin-project-lite = "0.2"
regex = "1.12.2"

[dev-dependencies]
tempfile = "3.0"
pretty_assertions = "1.0"
criterion = "0.5"
tokio-test = "0.4"
proptest = "1.0"

[build-dependencies]
tonic-build = "0.12"

[[bench]]
name = "erasure_coding"
harness = false

[[bench]]
name = "chunk_storage"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
debug = true

# Lint configuration for improved code quality
[lints.rust]
unsafe_code = "warn"            # Warn on unsafe code usage
unused_must_use = "warn"        # Warn on ignored Result/Option values

[lints.clippy]
# Code quality
clone_on_ref_ptr = "warn"       # Warn on Arc/Rc::clone() instead of .clone()
large_enum_variant = "warn"     # Warn on enums with large size differences
redundant_clone = "warn"        # Warn on unnecessary .clone() calls
inefficient_to_string = "warn"  # Warn on inefficient to_string implementations

# Error handling (warn - critical modules use #![deny] internally)
unwrap_in_result = "warn"       # Warn on unwrap() inside Result-returning functions

# Async patterns
async_yields_async = "warn"     # Warn on async blocks that yield async values

# Security-sensitive
# Note: unwrap_used and expect_used are denied in critical modules via #![deny]
# (src/raft/mod.rs, src/metadata/mod.rs, src/auth/mod.rs)
