[package]
name = "strata-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Strata distributed filesystem"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/strata/strata"
keywords = ["cli", "storage", "distributed", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "strata"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Output formatting
tabled = "0.15"
console = "0.15"
indicatif = { version = "0.17", features = ["tokio"] }
dialoguer = "0.11"
syntect = "5.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
humansize = "2.1"
dirs = "5.0"
url = "2.5"
uuid = { version = "1.6", features = ["v4"] }
glob = "0.3"
sha2 = "0.10"
base64 = "0.21"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# Config
config = "0.14"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"
